fix: sidenav to properly show all items when there is overflow (ENG-62513)

--- a/src/sideNav/SideNavMenu.less
+++ b/src/sideNav/SideNavMenu.less
@@ -24,8 +24,8 @@
 
 .SideNavMenu__nav {
     position: fixed;
-    height: 100%;
     width: 256px;
+    bottom: 0;
     background-color: var(--layer);
 
     .SideNav__link {
